gcc/testsuite/gdc.test/compilable/testDIP37a.d
// PERMUTE_ARGS:
// REQUIRED_ARGS: -c -Icompilable/extra-files
// EXTRA_SOURCES: extra-files/pkgDIP37/datetime/package.d
// EXTRA_SOURCES: extra-files/pkgDIP37/datetime/common.d

void main()
{
}
